--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.18.8",
     "firebase": "^8.3.1",
     "mdbreact": "^5.1.0",
+    "moment": "^2.29.2",
     "neumorphism-react": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
