--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quiz",
+  "name": "sattabjar",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,11 +14,13 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.18.8",
     "firebase": "^8.3.1",
+    "helmet": "^5.1.0",
     "mdbreact": "^5.1.0",
     "moment": "^2.29.2",
     "neumorphism-react": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-lottie": "^1.2.3",
     "react-scripts": "4.0.3",
     "react-super-responsive-table": "^5.2.0",
